# qnes

./: .clang-format  .clang-tidy  .travis.yml  README.md  meson.build
compile/: build.ninja  compile_commands.json
compile/meson-info/: intro-buildsystem_files.json  intro-projectinfo.json  intro-targets.json  meson-info.json
compile/meson-logs/: meson-log.txt
docs/: meson.build
include/: meson.build
include/components/: cpu.hh  meson.build  ram.hh
src/: meson.build
src/components/: meson.build  ram.cc
src/components/cpu/: addressing_modes.cc  cpu.cc  instructions.cc  meson.build  tables.cc
